fix(multibrowser and multidevice compatibility): fix lag on blur on safari and fix transition dark/light teme on safari. Force gpu instead of cpu for rendering.

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -27,7 +27,7 @@
     opacity: 0.25;
     will-change: filter;
     filter: blur(10px);
-    // transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
     border-radius: 15px;
   }
 }
