--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,6 +10,7 @@ html.transition,
 html.transition *,
 html.transition *:before,
 html.transition *:after {
+  transform: translate3d(0, 0, 0);
   transition: cubic-bezier(0.68, -0.55, 0.27, 01.55) 420ms !important;
   transition-delay: 0 !important;
 }
